--- a/src/templates/actor/parts/header/parts/total-armor.hbs
+++ b/src/templates/actor/parts/header/parts/total-armor.hbs
@@ -3,7 +3,7 @@
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
-    title=(localize "anima.ui.armor.title")
+    title=(localize "anima.ui.combat.finalArmor.title")
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
     class="armor"
@@ -13,7 +13,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cut"
         disabled=true
-        title=(localize "anima.ui.armor.at.cut.title")
+        title=(localize "anima.ui.combat.armors.at.cut.title")
         inputName=(concat "data.combat.armor.at.cut.value")
         inputValue=data.data.combat.totalArmor.at.cut.value
       }}
@@ -21,7 +21,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="impact"
         disabled=true
-        title=(localize "anima.ui.armor.at.impact.title")
+        title=(localize "anima.ui.combat.armors.at.impact.title")
         inputName=(concat "data.combat.armor.at.impact.value")
         inputValue=data.data.combat.totalArmor.at.impact.value
       }}
@@ -29,7 +29,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="thrust"
         disabled=true
-        title=(localize "anima.ui.armor.at.thrust.title")
+        title=(localize "anima.ui.combat.armors.at.thrust.title")
         inputName=(concat "data.combat.armor.at.thrust.value")
         inputValue=data.data.combat.totalArmor.at.thrust.value
       }}
@@ -37,7 +37,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="heat"
         disabled=true
-        title=(localize "anima.ui.armor.at.heat.title")
+        title=(localize "anima.ui.combat.armors.at.heat.title")
         inputName=(concat "data.combat.armor.at.heat.value")
         inputValue=data.data.combat.totalArmor.at.heat.value
       }}
@@ -45,7 +45,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="electric"
         disabled=true
-        title=(localize "anima.ui.armor.at.electricity.title")
+        title=(localize "anima.ui.combat.armors.at.electricity.title")
         inputName=(concat "data.combat.armor.at.electricity.value")
         inputValue=data.data.combat.totalArmor.at.electricity.value
       }}
@@ -53,7 +53,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cold"
         disabled=true
-        title=(localize "anima.ui.armor.at.cold.title")
+        title=(localize "anima.ui.combat.armors.at.cold.title")
         inputName=(concat "data.combat.armor.at.cold.value")
         inputValue=data.data.combat.totalArmor.at.cold.value
       }}
@@ -61,7 +61,7 @@
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="energy"
         disabled=true
-        title=(localize "anima.ui.armor.at.energy.title")
+        title=(localize "anima.ui.combat.armors.at.energy.title")
         inputName=(concat "data.combat.armor.at.energy.value")
         inputValue=data.data.combat.totalArmor.at.energy.value
       }}
