--- a/src/templates/common/domain/weapon/select-critic.hbs
+++ b/src/templates/common/domain/weapon/select-critic.hbs
@@ -5,11 +5,11 @@
   inputName=this.inputName
 }}
   <option {{#if (is "eq" this.inputValue '-')}}selected{{/if}} value='-'></option>
-  <option {{#if (is "eq" this.inputValue 'cut')}}selected{{/if}} value='cut'>{{localize 'anima.ui.armor.at.cut.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'impact')}}selected{{/if}} value='impact'>{{localize 'anima.ui.armor.at.impact.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'thrust')}}selected{{/if}} value='thrust'>{{localize 'anima.ui.armor.at.thrust.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'heat')}}selected{{/if}} value='heat'>{{localize 'anima.ui.armor.at.heat.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'electricity')}}selected{{/if}} value='electricity'>{{localize 'anima.ui.armor.at.electricity.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'cold')}}selected{{/if}} value='cold'>{{localize 'anima.ui.armor.at.cold.title'}}</option>
-  <option {{#if (is "eq" this.inputValue 'energy')}}selected{{/if}} value='energy'>{{localize 'anima.ui.armor.at.energy.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'cut')}}selected{{/if}} value='cut'>{{localize 'anima.ui.combat.armors.at.cut.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'impact')}}selected{{/if}} value='impact'>{{localize 'anima.ui.combat.armors.at.impact.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'thrust')}}selected{{/if}} value='thrust'>{{localize 'anima.ui.combat.armors.at.thrust.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'heat')}}selected{{/if}} value='heat'>{{localize 'anima.ui.combat.armors.at.heat.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'electricity')}}selected{{/if}} value='electricity'>{{localize 'anima.ui.combat.armors.at.electricity.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'cold')}}selected{{/if}} value='cold'>{{localize 'anima.ui.combat.armors.at.cold.title'}}</option>
+  <option {{#if (is "eq" this.inputValue 'energy')}}selected{{/if}} value='energy'>{{localize 'anima.ui.combat.armors.at.energy.title'}}</option>
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
