--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -29,7 +29,7 @@
     .magic-projection {
       .title {
         font-weight: bold;
-        margin-top: 0.5rem;
+        margin-top: 1rem;
         margin-bottom: 0.25rem;
 
         text-align: center;
@@ -38,7 +38,7 @@
       .imbalance {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 0.5rem;
+        grid-column-gap: 1rem;
       }
     }
     // Magic Projection
@@ -202,26 +202,6 @@
     }
     // Spheres
 
-    // Free Access Spells
-    .free-access-spells {
-      .free-access-spell-row:first-child {
-        margin-top: 0;
-      }
-
-      .free-access-spell-row {
-        margin-top: 0.75rem;
-
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-column-gap: 0.1rem;
-
-        .spell .input-container {
-          width: 100%;
-        }
-      }
-    }
-    // Free Access Spells
-
     // Spell Maintenances
     .spell-maintenances {
       .spell-maintenance-row:first-child {
@@ -275,7 +255,7 @@
           border-radius: $border-radius;
           background: $light-cream;
           font-weight: bold;
-          padding: 0.25rem 0.5rem;
+          padding: 0.25rem 1rem;
 
           width: 100%;
         }
@@ -302,5 +282,111 @@
       }
     }
     // Metamagics
+  }
+
+  .mystic-spells-tab {
+    .spells {
+      & > .group-body {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .spell-row {
+        width: calc(50% - 1rem);
+
+        border-radius: $border-radius;
+        box-shadow: $card-box-shadow;
+
+        margin: 0.5rem;
+
+        .input {
+          height: 1.25rem;
+        }
+
+        .spell-header {
+          padding-right: 0.5rem;
+          padding-left: 0.5rem;
+
+          width: 100%;
+
+          .first-row {
+            width: 100%;
+
+            .name .input-container {
+              width: 100%;
+            }
+          }
+
+          .second-row {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            .level .input-container {
+              width: 2.2rem;
+            }
+
+            .level, .via {
+              .input {
+                height: 1.5rem;
+              }
+            }
+
+            .via .input-container {
+              width: 8rem;
+            }
+          }
+        }
+
+        .base-grade {
+          margin-bottom: 0.5rem;
+
+          .grade-name {
+            align-self: flex-end;
+          }
+        }
+
+        .base-grade,
+        .arcane-grade,
+        .intermediate-grade,
+        .advanced-grade {
+          .grade-name {
+            min-width: 5rem;
+          }
+        }
+
+        .grade-row {
+          display: flex;
+          justify-content: start;
+
+          .int-required {
+            .input-container {
+              width: 3.5rem;
+            }
+          }
+
+          .description {
+            width: 100%;
+
+            .input-container {
+              width: 100%;
+            }
+          }
+        }
+
+        .spell-footer {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          padding-left: 1rem;
+          padding-right: 1rem;
+
+          .input {
+            height: 1.5rem;
+          }
+        }
+      }
+    }
   }
 }
