--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -1,10 +1,10 @@
 <div class='mystic'>
-  <nav class="mystic-tabs tabs secondary-tab" data-group="primary">
-    <a class="item" data-tab="mystic-main">{{localize "anima.ui.mystic.tabs.main"}}</a>
+  <nav class="mystic-tabs tabs secondary-tab" data-group="secondary">
+    <a class="item active" data-tab="mystic-main">{{localize "anima.ui.mystic.tabs.main"}}</a>
     <a class="item" data-tab="mystic-spells">{{localize "anima.ui.mystic.tabs.secondaries"}}</a>
   </nav>
   <section class='mystic-body'>
-    <div class='tab active' data-group="primary" data-tab="mystic-main">
+    <div class='tab' data-group="secondary" data-tab="mystic-main">
       <div class='mystic-main-tab'>
         <div class='first-column'>
           <div class='sub-columns'>
@@ -22,7 +22,6 @@
           </div>
         </div>
         <div class='second-column'>
-          {{> "systems/animabf/templates/actor/parts/mystic/parts/free-access-spells.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/spell-maintenances.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/selected-spells.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/summons.hbs"}}
@@ -31,8 +30,9 @@
       </div>
     </div>
 
-    <div class='tab' data-group="primary" data-tab="mystic-spells">
+    <div class='tab' data-group="secondary" data-tab="mystic-spells">
       <div class='mystic-spells-tab'>
+          {{> "systems/animabf/templates/actor/parts/mystic/parts/spells/spells.hbs"}}
       </div>
     </div>
   </section>
