--- a/src/templates/actor/parts/mystic/parts/spells/spells.hbs
+++ b/src/templates/actor/parts/mystic/parts/spells/spells.hbs
@@ -114,6 +114,14 @@
                 inputName=(concat "data.dynamic.spells." spell._id ".data.actionType.value")
                 inputValue=spell.data.actionType.value
               }}
+              {{>
+              'systems/animabf/templates/common/ui/horizontal-titled-input.hbs'
+                class="has-daily-maintenance"
+                title=(localize "anima.ui.mystic.spell.hasDailyMaintenance.title")
+                inputType="checkbox"
+                inputName=(concat "data.dynamic.spells." spell._id ".data.hasDailyMaintenance.value")
+                inputValue=(is 'eq' spell.data.hasDailyMaintenance.value true)
+              }}
             </div>
           {{/"systems/animabf/templates/common/ui/group-footer.hbs"}}
         {{/"systems/animabf/templates/common/ui/group.hbs"}}
